Fixing some spacing issues

--- a/css/device-mock.css
+++ b/css/device-mock.css
@@ -1,10 +1,11 @@
-.device-mock{
+.device-mock {
     display:inline-block;
     position:relative;
     -webkit-box-sizing:content-box !important;
-    box-sizing:content-box !important
+    box-sizing:content-box !important;
 }
-.device-mock .screen{
+
+.device-mock .screen {
     width:100%;
     position:relative;
     height:100%;
@@ -14,7 +15,7 @@
     display:block;
     border-radius:.1em;
     -webkit-box-shadow:0 0 0 .2em #111;
-    box-shadow:0 0 0 .2em #111
+    box-shadow:0 0 0 .2em #111;
 }
 
 .device-mock.iphone-x {
@@ -23,10 +24,13 @@
     padding: 1.3em;
     background: #fdfdfd;
     -webkit-box-shadow: inset 0 0 1em 0 rgba(0, 0, 0, 0.35);
-    box-shadow: inset 0 0 1em 0 rgba(0, 0, 0, 0.35);
+    box-shadow:
+      inset 0 0 1em 0 rgba(0, 0, 0, 0.35),
+      0 1rem 3rem rgba(60, 68, 66, .25),
+      0 0.5rem 1rem rgba(0, 0, 0, 0.1);
     border-radius: 3.3em;
 }
-.device-mock.iphone-x .overflow{
+.device-mock.iphone-x .overflow {
     width:100%;
     height:100%;
     position:absolute;
@@ -95,28 +99,24 @@
     z-index:4;
     background:white;
     border-bottom-left-radius:1.2em;
-    border-bottom-right-radius:1.2em
+    border-bottom-right-radius:1.2em;
 }
 .device-mock.iphone-x .notch:before,.device-mock.iphone-x .notch:after{
     content:'';
     height:.4em;
     position:absolute;
     top:0;
-    width:.4em
+    width:.4em;
 }
 .device-mock.iphone-x .notch:after{
     background:radial-gradient(circle at bottom left, transparent 0, transparent 70%, white 70%, white 100%);
-    left:-.4em
+    left:-.4em;
 }
 .device-mock.iphone-x .notch:before{
     background:radial-gradient(circle at bottom right, transparent 0, transparent 70%, white 70%, white 100%);
-    right:-.4em
+    right:-.4em;
 }
 
 .device-mock .screen img {
   width: 100%;
-}
-
-.screenshot-gallery-container {
-  font-size: 14px;
 }
