--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-  padding: 1rem;
+  padding: 0;
   margin: 0;
   color: #282b2a;
   background-color: white;
@@ -398,8 +398,7 @@ article:first-of-type {
   left: 0;
   top: 0;
   right: 0;
-  margin: -1.5rem -1rem -1rem -1rem;
-  padding: .5rem 1rem 1rem 1rem;
+  padding: 1rem;
 }
 
 .home .hero {
@@ -420,6 +419,10 @@ article:first-of-type {
   right: 0;
 }
 
+section.work, section.words, section.about {
+  padding: 1rem;
+}
+
 /* # SECTION: HERO # */
 
 .home .hero, .contact {
@@ -432,8 +435,8 @@ article:first-of-type {
 }
 
 .project .hero {
-  margin: 4rem 0 2rem;
-}
+  margin: 0;
+  padding: 4rem 1rem 0;}
 
 /* # SECTION: WORK & PROJECTS # */
 
@@ -481,6 +484,7 @@ article:first-of-type {
 
 .project-content {
   position: relative;
+  padding: 1rem;
 }
 
 .feature-img {
@@ -502,21 +506,28 @@ article:first-of-type {
   position: absolute;
   left:0;
   overflow-x: scroll;
-  width: 100vw;
+  width: 100%;
   background-color: #f1f1f1;
-  padding: 1rem;
+  padding: 2rem;
 }
 
 .screenshot-gallery-container {
-  width: 400%;
+  width: 350vw;
+  font-size: 2.5vw;
+}
+
+.screenshot-gallery .device-mock {
+  margin: 1rem 6vw;
+}
+
+.screenshot-gallery .device-mock:first-child {
+  margin-left: 12vw;
 }
 
 .screenshot-gallery .screenshot {
   width: 66.6667vw;
   max-width: 300px;
 }
-
-/* Project: Pin */
 
 /* # SECTION: ABOUT # */
 
@@ -564,14 +575,8 @@ article:first-of-type {
 
 .contact-details-item {
   display: inline-block;
-  /* margin: .2rem 1rem 1rem 0; */
   border-bottom: none;
-}
-
-.contact-details-item {
-  margin-right: 1rem;
-  margin-left: 1rem;
-
+  margin: 1rem;
 }
 
 .contact-details-items-main {
@@ -763,7 +768,7 @@ fieldset, form, label {
 }
 
 .contactFormContainer, .projectFormContainer {
-  margin-bottom: 4rem;
+  margin-bottom: 3rem;
 }
 
 .contactFormContainer .contactForm, .projectFormContainer .projectForm  {
@@ -1019,7 +1024,6 @@ footer {
   left: 0;
   bottom: 0;
   right: 0;
-  margin: -1.5rem -1rem -1rem -1rem;
   padding: .5rem 1rem 1rem 1rem;
   background-color: #005e5f;
 
@@ -1027,15 +1031,15 @@ footer {
 }
 
 
-/*##########################################################
-############################################################
-############                                    ############
-############                                    ############
-############           MEDIA QUERIES            ############
-############                                    ############
-############                                    ############
-############################################################
-##########################################################*/
+/*####################################################
+######################################################
+############                              ############
+############                              ############
+############        MEDIA QUERIES         ############
+############                              ############
+############                              ############
+######################################################
+####################################################*/
 
 /* ~576px */
 @media screen and (min-width: 36rem){
@@ -1054,6 +1058,14 @@ footer {
 
   .banner {
     grid-column: 1/3;
+  }
+
+  section.words, section.about {
+    padding: 2rem;
+  }
+
+  section.work > h1 {
+    padding-left: 1rem;
   }
 
   /* Navigation */
@@ -1212,9 +1224,6 @@ footer {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     grid-gap: 1rem;
-  }
-
-  .project .project-content {
     grid-auto-rows: auto;
   }
 
@@ -1226,6 +1235,19 @@ footer {
   .feature-img {
     grid-column: 4 / span 7;
     margin: 2rem 0;
+  }
+  .gallery {
+    height: 30rem;
+  }
+
+  .screenshot-gallery-container {
+    font-size: 0.6rem;
+  }
+  .screenshot-gallery .device-mock {
+    margin-left:4rem;
+  }
+  .screenshot-gallery .device-mock:first-child {
+    margin-left: 6rem;
   }
 }
 
